--- a/index.html
+++ b/index.html
@@ -19,12 +19,27 @@
 <body>
   <!-- header -->
 <header>
-  <div>
-    <h4>MOBA Genre</h4>
-    <div>
-      <a></a>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">MOBA Genre</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#credentials">Credentials</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#mains">My Mains</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#roles">Roles</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
+  </nav>
 </header>
 <!-- Banner -->
  <h4 class="d-flex justify-content-center">Credentials</h4>
